# youtube-live-tool

./: .gitignore  Cargo.toml  README.md  architechture.md  camera.md  detailed-design.md  functional-design.md  requirements-definition.md  shear-screen.md  test-specification.md
config/: log4rs.yaml
src/: main.rs
src/app/: main_window.rs  mod.rs  stream_window.rs
src/models/: audio.rs  banner.rs  camera.rs  comment.rs  gpu_processor.rs  mod.rs  screen_capture.rs  stream.rs  video.rs  video_config.rs  video_frame.rs
src/shaders/: color_convert.wgsl  downscale.wgsl
src/tabs/: audio_tab.rs  banner_tab.rs  comment_tab.rs  mod.rs  status_tab.rs  stream_tab.rs  video_tab.rs
