[package]
name = "youtube-live-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24.0", features = ["default"] }
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
egui_extras = { version = "0.24.0", features = ["all_loaders"] }
nokhwa = { version = "0.10.4", features = ["input-native"] }
image = "0.24.7"
log = "0.4"
log4rs = "1.2"
screenshots = "0.8.5"
rayon = "1.8"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading"
]}
parking_lot = "0.12"
